# Chat

./: README.md
Client/: CMakeLists.txt  README.md  client  main.cpp
Client/NetClient/: NetClient.cpp  NetClient.h
Client/StateMachine/: ChatState.cpp  ChatState.h  ChatStateFactory.cpp  ChatStateFactory.h  IStateFactory.h  LoginState.cpp  LoginState.h  LoginStateFactory.cpp  LoginStateFactory.h  RegistrationState.cpp  RegistrationState.h  RegistrationStateFactory.cpp  RegistrationStateFactory.h  State.h  StateMachine.cpp  StateMachine.h  Wrapper.h
Server/: CMakeLists.txt  README.md  main.cpp  server
Server/Entities/: DataContext.cpp  DataContext.h  User.cpp  User.h  UserRole.cpp  UserRole.h
Server/NetServer/: server.cpp  server.h
